# gitignored-list

./: .gitignore  README.md  config.yaml  hello.py  main.py  pyproject.toml
.github/workflows/: test.yaml
src/gitignored_list/: logger.py  project.py  run_cmd.py
test/: project_test.py
