[project]
name = "gitignored-list"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic-settings[yaml]>=2.7.1",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.11.1",
    "pytest>=8.3.4",
    "pytest-cov>=5.0.0",
]

[tool.coverage.run]
omit = [
    "test/*",
    "*/*_test.py",
    "*/test_*.py",
]
